# go2do

./: .gitignore  README.md  build_release.sh  com.ideneyesa.go2do.yml  go2do_architecture.md  go2do_ui1.md  go2do_ui2.md  go2do_versions.md  install.sh  tasks.md
.github/workflows/: release.yml
client/: Cargo.toml  LICENSE  go2do.db  style.css
client/assets/: go2do.desktop
client/src/: auth.rs  config.rs  db.rs  main.rs  sync.rs  sync_manager.rs  ui.rs
server/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
server/src/: auth.ts  index.ts  middleware.ts  ratelimit.ts  sync.ts  types.ts
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/register/: page.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/components/: app-sidebar.tsx
web/src/hooks/: use-tasks.ts
web/src/lib/: api.ts  types.ts
