[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
env_logger = "0.10"
log = "0.4"
ksni = "0.2"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
