[package]
name = "client"
version = "2.0.3"
edition = "2024"
description = "A minimalist to-do list application with local-first sync."

[dependencies]
gtk4 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3.6.3"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"

[package.metadata.deb]
name = "go2do"
maintainer = "Ideneyesa <fleetlinq.on@gmail.com>"
copyright = "2024, Ideneyesa"
license-file = ["LICENSE", "4"]
extended-description = """
Go2Do is a minimalist task management application with local-first sync capabilities.
"""
depends = "$auto" 
section = "utility"
priority = "optional"
assets = [
    ["target/release/client", "usr/bin/go2do", "755"],
    ["style.css", "usr/share/go2do/style.css", "644"],
    ["assets/icon.jpg", "usr/share/icons/hicolor/512x512/apps/go2do.png", "644"],
    ["assets/go2do.desktop", "usr/share/applications/go2do.desktop", "644"]
]
